--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,11 @@
 ---
 
 @import "no-style-please";
+html {
+  color: gray;
+  background-color: black;
+  font-family: monospace;
+  font-size: 1.3rem;
+  line-height: 1.3;
+  -webkit-font-smoothing: antialiased;
+}
