--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,6 +1,6 @@
 html {
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: black;
   font-family: monospace;
   font-size: 1.3rem;
   line-height: 1.3;
