--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,10 +1,19 @@
 html {
-  color: white;
-  background-color: black;
-  font-family: monospace;
+  color: #d0d0d0;
+  background-color: #202020;
+  font-family: "Courier 10 Pitch", Courier, "Courier New", monospace;
   font-size: 1.3rem;
   line-height: 1.3;
   -webkit-font-smoothing: antialiased;
+}
+
+a:link, a:visited {
+  color: #8fa5d1;
+  text-decoration: none;
+}
+
+a:hover, a:active {
+  color: darkred;
 }
 
 h2, h3, h4, h5, h6 { margin-top: 3rem; }
