--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -26,10 +26,11 @@ li { margin: 0.4rem 0; }
 
 *:target { background-color: yellow; }
 
-.wrapper {
-  max-width: 60ch;
-  margin: 4rem auto;
-  padding: 0 1rem;
+.w {
+  width: fit-content;
+  max-width: 640px;
+  margin: 0 auto;
+  padding: 4rem 2rem;
 }
 
 hr {
